<?xml version="1.0"?>
<package format="3">
  <name>dre_slam</name>
  <version>0.0.0</version>
  <description>dre_slam is a package for SLAM and robot localization using dynamic pixel culling and Octomap fusion.</description>

  <maintainer email="alexfritsch10@gmail.com">alex</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build and Runtime Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 packages -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <!-- Octomap dependencies for mapping -->
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>

  <!-- Additional libraries and tools -->
  <build_depend>Eigen3</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>ceres-solver</build_depend>
  <build_depend>Sophus</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>ament_lint_auto</build_depend>
  <build_depend>ament_lint_common</build_depend>

  <exec_depend>Eigen3</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>ceres-solver</exec_depend>
  <exec_depend>Sophus</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <!-- Testing and Linting -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export Information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
